feat(core): disallow enabling template and journal together

--- a/packages/frontend/i18n/src/resources/en.json
+++ b/packages/frontend/i18n/src/resources/en.json
@@ -1637,6 +1637,12 @@
   "Template": "Template",
   "com.affine.template-list.empty": "No template",
   "com.affine.template-list.create-new": "Create new template",
+  "com.affine.template-journal-conflict.title": "Can't be both Journal and Template.",
+  "com.affine.template-journal-conflict.description": "Do not set a journal document as a template, as it may cause features to malfunction. Use it as a template or as a journal.",
+  "com.affine.template-journal-conflict.set-template": "Set as Template",
+  "com.affine.template-journal-conflict.set-journal": "Set as Journal",
+  "com.affine.template-journal-conflict.keep-template": "Keep as Template",
+  "com.affine.template-journal-conflict.keep-journal": "Keep as Journal",
   "com.affine.template-journal-onboarding.title": "Set a Template for the Journal",
   "com.affine.template-journal-onboarding.select": "Select",
   "com.affine.settings.workspace.template.title": "My Templates",
