--- a/packages/frontend/i18n/src/resources/en.json
+++ b/packages/frontend/i18n/src/resources/en.json
@@ -1758,6 +1758,7 @@
   "com.affine.fail-to-join-workspace.description-1": "Unable to join <1/> <2>{{workspaceName}}</2> due to insufficient seats available.",
   "com.affine.fail-to-join-workspace.description-2": "Please contact your workspace owner to add more seats.",
   "error.INTERNAL_SERVER_ERROR": "An internal error occurred.",
+  "error.NETWORK_ERROR": "Network error.",
   "error.TOO_MANY_REQUEST": "Too many requests.",
   "error.NOT_FOUND": "Resource not found.",
   "error.BAD_REQUEST": "Bad request.",
